[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameScene/GameScene.gd" type="Script" id=1]
[ext_resource path="res://Map/Map01.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/TowerSelector.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.501961 )
skew = Vector2( 1, 0 )
corner_radius_bottom_right = 72
expand_margin_left = 60.0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )
tower_type = PoolStringArray( "GunTower" )
fund = 100

[node name="MapProxy" type="Node2D" parent="."]

[node name="Map" parent="MapProxy" instance=ExtResource( 2 )]

[node name="Turrents" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="TowerSelector" parent="." instance=ExtResource( 4 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="UI/HUD"]
anchor_right = 1.0
margin_right = -1280.0
margin_bottom = 120.0
rect_min_size = Vector2( 320, 120 )
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 15
custom_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/Panel/MarginContainer"]
margin_left = 40.0
margin_top = 15.0
margin_right = 320.0
margin_bottom = 120.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/Panel/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 45.0
custom_constants/separation = 25

[node name="Hp" type="Control" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 45.0
rect_min_size = Vector2( 120, 45 )
hint_tooltip = "left health"
theme = SubResource( 4 )

[node name="HpLabel" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/HBoxContainer/Hp"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -22.5
margin_right = 56.0
margin_bottom = 22.5
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "HP"
align = 2
valign = 1

[node name="HpValue" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/HBoxContainer/Hp"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -22.5
margin_bottom = 22.5
custom_fonts/font = SubResource( 1 )
text = "20"
valign = 1

[node name="Fund" type="Control" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 235.0
margin_bottom = 45.0
rect_min_size = Vector2( 90, 45 )

[node name="FundLabel" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/HBoxContainer/Fund"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -22.5
margin_right = 33.0
margin_bottom = 22.5
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "$"
align = 2
valign = 1

[node name="FundValue" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/HBoxContainer/Fund"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -22.5
margin_bottom = 22.5
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "10"
valign = 1

[node name="Wave" type="Control" parent="UI/HUD/Panel/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 280, 45 )

[node name="WaveLabel" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/Wave"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -22.5
margin_right = 33.0
margin_bottom = 22.5
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "W%"
align = 2
valign = 1

[node name="Wvalue" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/Wave"]
margin_left = 65.0
margin_right = 121.0
margin_bottom = 45.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "20"
valign = 1

[node name="Label" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/Wave"]
margin_left = 127.0
margin_right = 145.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 1 )
text = "/"

[node name="MWValue" type="Label" parent="UI/HUD/Panel/MarginContainer/VBoxContainer/Wave"]
margin_left = 149.0
margin_right = 205.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "20"
valign = 1

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="wave_finished" from="." to="." method="_on_GameScene_wave_finished"]
